# GI_S6_APP1

./: .gitignore  CMakeLists.txt
scripts/: multi_proc.py
src/: asset_conv.cpp
waveprop/: CMakeCache.txt  ftdt_yee.cpp  ftdt_yee.cpp.copie  ftdt_yee.cpp.copie.copie  ftdt_yee.py  lab1_ex4.cpp  lab1_ex4.py  test.cpp  test.py
